Support SwiftPM for buidling on macOS
This requires reorganizing files and renaming the test target to match SwiftPM conventions.

--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -3,7 +3,7 @@ platform :ios, '8.0'
 
 use_frameworks!
 
-target 'HashidsTests' do
+target 'Hashids_SwiftTests' do
 
   pod 'Hashids-Swift', :path => "./../"
 
